# Collective-Modding-Toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/: app_settings.py  autofixes.py  cm_checker.py  downgrader.py  enums.py  game_info.py  globals.py  helpers.py  logger.py  main.py  mod_manager_info.py  modal_window.py  patcher_archives.py  patcher_base.py  scan_settings.py  settings.json  utils.py
src/patcher/: __init__.py  _archives.py  _base.py
src/sv_ttk/: LICENSE_MODIFICATIONS  __init__.py  sv.tcl
src/sv_ttk/theme/: dark.tcl
src/tabs/: __init__.py  _about.py  _conflicts.py  _errors.py  _f4se.py  _overview.py  _scanner.py  _settings.py  _suggestions.py  _tools.py
wip-files/: dds_info.py
wip-files/ini-editor/: _tools.py  ini_file.py
